examples/test/testpolicy2068.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2068
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key12: value5
      key10: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value17
          key6: value45
          key43: value18
      podSelector:
        matchLabels:
          key47: value41
          key7: value36
          key44: value38
